@@ -138,6 +138,10 @@
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
+  <module id="gconf-editor">
+    <cvs-directory>gconf-editor/docs</cvs-directory>
+  </module>
+
   <module id="gfloppy">
     <cvs-directory>gnome-utils/gfloppy/doc</cvs-directory>
   </module>
@@ -280,6 +284,10 @@
 
   <module id="tomboy">
     <cvs-directory>tomboy/help</cvs-directory>
+  </module>
+
+  <module id="totem">
+    <cvs-directory>totem/help</cvs-directory>
   </module>
 
   <module id="zenity">
