@@ -1,3 +1,7 @@
+2006-10-08  Christophe Bliard  <christophe.bliard@trux.info>
+
+	* modules.xml: Add gconf-editor & totem
+
 2006-08-27  Christophe Bliard  <christophe.bliard@trux.info>
 
 	* modules.xml: Add tomboy
